<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2018 Andreas Leszczynski

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/StyleScrollView"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:keepScreenOn="true"
    tools:context="com.example.android.quiz.Question3Activity">

    <LinearLayout style="@style/StyleLinearLayoutTop">

        <TextView
            android:id="@+id/timer3"
            style="@style/StyleTimer" />

        <TextView
            style="@style/StyleQuestion"
            android:text="@string/question3" />

        <RadioGroup
            android:id="@+id/question3answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:theme="@style/StyleRadioGroup">

            <RadioButton
                android:id="@+id/question3answer1"
                style="@style/StyleRadioButton"
                android:text="@string/question3answer1" />

            <RadioButton
                android:id="@+id/question3answer2"
                style="@style/StyleRadioButton"
                android:text="@string/question3answer2" />

            <RadioButton
                android:id="@+id/question3answer3"
                style="@style/StyleRadioButton"
                android:text="@string/question3anwer3" />

            <RadioButton
                android:id="@+id/question3answer4"
                style="@style/StyleRadioButton"
                android:text="@string/question3answer4" />
        </RadioGroup>

        <Button
            style="@style/StyleButton"
            android:layout_gravity="center"
            android:onClick="question4"
            android:text="@string/next" />

    </LinearLayout>
</ScrollView>